--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,8 +1,7 @@
-
 .profile {
     background: var(--bg);
     min-height: 80vh;
-    padding: 70px 8%;
+    padding: 7.5% 10%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -19,7 +18,7 @@
 
 .profile-name {
     font-size: clamp(48px, 6vw, 72px);
-    font-weight: 700;
+    font-weight: 500;
     color: var(--navy);
     letter-spacing: 1px;
 }
@@ -51,6 +50,7 @@
     width: 100%;
     height: 100%;
     box-shadow: 0 12px 35px rgba(11, 25, 87, 0.15);
+    transition: transform 0.3s ease;
 }
 
 .profile-picture img:hover {
@@ -73,9 +73,11 @@
     text-decoration: none;
     font-weight: bold;
     transition: all 0.3s ease;
-} .cv-button:hover {
+} 
+
+.cv-button:hover {
     background-color: var(--accent);
-    color: white;
+    color: var(--bg);
     transform: translateY(-2px);
 }
 
@@ -99,7 +101,7 @@
 
 .social-icons a:hover {
     background-color: var(--accent);
-    color: white;
+    color: var(--bg);
     transform: scale(1.1);
 }
 
@@ -107,7 +109,7 @@
     .profile {
         flex-direction: column;
         gap: 40px;
-        padding: 70px 24px;
+        padding: 25%;
         text-align: center;
     }
 
@@ -130,5 +132,6 @@
     }
     .profile-contact {
         justify-content: center;
+        flex-direction: column;
     }
 }
