--- a/index.css
+++ b/index.css
@@ -11,3 +11,7 @@ body {
     padding: 0;
     font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
 }
+
+h1 {
+    letter-spacing: 3px;
+}
