--- a/src/components/HobbyCard/HobbyCard.css
+++ b/src/components/HobbyCard/HobbyCard.css
@@ -1,40 +1,35 @@
 .hobby-container {
-    background: var(--soft);
-    border-radius: 18px;
+    border-radius: 25px;
     overflow: hidden;
 
     width: 100%;
     max-width: 550px;
 
     box-shadow: 0 8px 24px rgba(0,0,0,0.08);
-    transition: transform 0.25s ease, box-shadow 0.25s ease;
+    transition: transform 0.25s ease;
 }
 
 .hobby-container {
-    background: var(--bg);
+    background: var(--soft);
     border-radius: 18px;
-    overflow: hidden; /* ALWAYS here */
+    overflow: hidden;
 
     transition: transform 0.35s ease, box-shadow 0.35s ease;
 }
 
 .hobby-container:hover {
-    transform: translateY(-6px) scale(1.02); /* combine transforms */
+    transform: translateY(-6px) scale(1.02); 
     box-shadow: 0 16px 40px rgba(0,0,0,0.12);
 }
 
 .hobby-image {
     width: 100%;
-    height: 200px;
+    height: 250px;
     object-fit: cover;
 
-    transition: transform 0.4s ease, filter 0.4s ease; /* here */
+    transition: transform 0.4s ease, filter 0.4s ease;
 }
 
-.hobby-container:hover .hobby-image {
-    transform: scale(1.1);
-    filter: brightness(0.9);
-}
 
 .hobby-content {
     padding: 10px 30px 0px;
@@ -53,7 +48,7 @@
 }
 
 .hobby-description {
-    font-size: 0.875rem;
+    font-size: 0.75rem;
     color: var(--navy);
     opacity: 0.5;
     margin: 0;
