--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -32,3 +32,13 @@
     padding-top: 20px;
     justify-items: center;
 }
+
+@media (max-width: 768px) {
+    .about-me-container {
+        padding: 40px 15px;
+    } .about-me-container p {
+        max-width: 75%;
+        margin: 0 auto;
+        font-size: 16px;
+    } 
+}
