--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -26,7 +26,6 @@
     width: 100%;
     height: 250px;
     object-fit: cover;
-
     transition: transform 0.4s ease, filter 0.4s ease;
 }
 
@@ -35,7 +34,7 @@
     margin: 0;
     display: flex;
     flex-direction: column;
-    gap: 8px;
+    gap: 0px;
     text-align: left;
 }
 
@@ -46,3 +45,11 @@
     margin: 0;
 }
 
+@media (min-width: 480px) {
+    .card-image {
+        height: 300px;
+    } p.card-description {
+        margin: 0;
+        padding-bottom: 25px;
+    }
+}
