--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -1,8 +1,12 @@
 .projects-container {
-    padding: 80px 60px;
-    max-width: 56rem;
+    padding: 80px 0px;
+    max-width: 100%;
     margin: 0 auto;
     background: var(--soft);
+}
+
+.career-header h1 {
+    padding: 0 0 40px 0;
 }
 
 .projects-grid {
@@ -362,7 +366,7 @@
 /* Responsive Design */
 @media (max-width: 968px) {
     .project-card {
-        max-width: 75%;
+        max-width: 100%;
         margin: 0 auto;
     }
     .projects-grid {
@@ -379,6 +383,9 @@
 @media (max-width: 768px) {
     .projects-container {
         padding: 60px 30px;
+    }
+    .career-header {
+        max-width: 100%;
     }
 
     .project-image-container {
@@ -436,8 +443,7 @@
 @media (max-width: 480px) {
     .projects-container {
         padding: 50px 20px;
-        max-width: 75%;
-
+        max-width: 100%;
     }
 
     .project-title {
