--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -366,7 +366,7 @@
 /* Responsive Design */
 @media (max-width: 968px) {
     .project-card {
-        max-width: 100%;
+        max-width: 75%;
         margin: 0 auto;
     }
     .projects-grid {
@@ -383,7 +383,10 @@
 @media (max-width: 768px) {
     .projects-container {
         padding: 0px 30px;
+    }
+    .project-card {
         max-width: 75%;
+        margin: 0 auto;
     }
 
     .project-image-container {
@@ -442,6 +445,10 @@
     .projects-container {
         padding: 50px 20px;
         max-width: 100%;
+    }
+    .project-card {
+        max-width: 75%;
+        margin: 0 auto;
     }
 
     .project-title {
